--- a/PA1_template.html
+++ b/PA1_template.html
@@ -221,17 +221,8 @@ library(dplyr,warn.conflicts=FALSE)
 
 <hr/>
 
-<pre><code class="r">ActivityData &lt;- read.csv(&quot;./repdata-data-activity/activity.csv&quot;)
-</code></pre>
-
-<pre><code>## Warning in file(file, &quot;rt&quot;): cannot open file &#39;./repdata-data-activity/
-## activity.csv&#39;: No such file or directory
-</code></pre>
-
-<pre><code>## Error in file(file, &quot;rt&quot;): cannot open the connection
-</code></pre>
-
-<pre><code class="r">#date into dateformat:
+<pre><code class="r">ActivityData &lt;- read.csv(&quot;C:/2015 R Folder/RepData_PeerAssessment1/repdata-data-activity/activity.csv&quot;)
+#date into dateformat:
 ActivityData$date &lt;- ymd(ActivityData$date)
 </code></pre>
 
